stDemoOne/force-app/main/default/objects/PSCommFooterConfig__c/PSCommFooterConfig__c.object-meta.xml
<CustomObject>
    <label>PSCommFooterConfig</label>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PSCommFooterConfig</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>