stDemoOne/force-app/main/default/objects/PSCommFooterConfig__c/fields/Copyright__c.field-meta.xml
<CustomField>
    <fullName>Copyright__c</fullName>
    <label>Copyright</label>
    <length>125</length>
    <type>Text</type>
</CustomField>