stDemoOne/force-app/main/default/objects/PSCommFooterConfig__c/fields/Email_Signup__c.field-meta.xml
<CustomField>
    <fullName>Email_Signup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Signup?</label>
    <type>Checkbox</type>
</CustomField>