stDemoOne/force-app/main/default/objects/PSCommFooterConfig__c/fields/Home__c.field-meta.xml
<CustomField>
    <fullName>Home__c</fullName>
    <label>Home</label>
    <type>Url</type>
</CustomField>