stDemoOne/force-app/main/default/objects/PSCommFooterConfig__c/fields/Logo_Icon__c.field-meta.xml
<CustomField>
    <fullName>Logo_Icon__c</fullName>
    <label>Logo Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>