stDemoOne/force-app/main/default/objects/PSCommFooterConfig__c/fields/Powered_by_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Powered_by_Salesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Powered by Salesforce?</label>
    <type>Checkbox</type>
</CustomField>