stDemoOne/force-app/main/default/objects/PSCommFooterConfig__c/fields/Primary_Color_3__c.field-meta.xml
<CustomField>
    <fullName>Primary_Color_3__c</fullName>
    <label>Primary Color 3</label>
    <length>7</length>
    <type>Text</type>
</CustomField>