stDemoOne/force-app/main/default/objects/PSCommFooterConfig__c/fields/Primary_Label__c.field-meta.xml
<CustomField>
    <fullName>Primary_Label__c</fullName>
    <label>Primary Label</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>