stDemoOne/force-app/main/default/objects/PSCommFooterConfig__c/fields/RSS__c.field-meta.xml
<CustomField>
    <fullName>RSS__c</fullName>
    <label>RSS</label>
    <type>Url</type>
</CustomField>