stDemoOne/force-app/main/default/objects/PSCommFooterConfig__c/fields/Secondary_Color_3__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Color_3__c</fullName>
    <label>Secondary Color 3</label>
    <length>7</length>
    <type>Text</type>
</CustomField>