stDemoOne/force-app/main/default/objects/PSCommFooterConfig__c/fields/Secondary_Label__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Label__c</fullName>
    <label>Secondary Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>