stDemoOne/force-app/main/default/objects/PSCommFooterConfig__c/fields/Twitter__c.field-meta.xml
<CustomField>
    <fullName>Twitter__c</fullName>
    <label>Twitter</label>
    <type>Url</type>
</CustomField>